# taxi-fare-model

./: ml_flow_test.py  model.joblib  pyproject.toml
TaxiFareModel/: encoders.py  trainer.py
