[tool.poetry]
name = "TaxiFareProject"
version = "0.1.0"
description = ""
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.1.2"
setuptools = "^57.0.0"
twine = "^3.4.1"
wheel = "^0.36.2"
numpy = "^1.20.3"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
gcsfs = "^2021.5.0"
google-cloud-storage = "^1.38.0"
mlflow = "^1.17.0"
s3fs = "^2021.5.0"
six = "^1.16.0"
joblib = "^1.0.1"
termcolor = "^1.1.0"
memoized-property = "^1.0.3"
coverage = "^5.5"
pytest = "^6.2.4"
yapf = "^0.31.0"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
